--- a/clang-format.org
+++ b/clang-format.org
@@ -1,6 +1,6 @@
 #+title: Clang-Format Settings
 Use a style similar to Linux kernel style (but with 4-wide indents and spaces over tabs).
-#+begin_src yaml :tangle .clang-format
+#+begin_src yaml :tangle ~/.clang-format
 BasedOnStyle: LLVM
 IndentWidth: 4
 BreakBeforeBraces: Linux
