--- a/profile.org
+++ b/profile.org
@@ -1,13 +1,13 @@
 #+title: =.profile= Settings
 * Path
 Add items to the path.
-#+begin_src sh :tangle .profile
+#+begin_src sh :tangle ~/.profile
 export PATH="$HOME/.local/share/fzf-zsh-plugin/bin:$HOME/node_modules/.bin:$HOME/.emacs.d/bin:$HOME/bin:$HOME/gems/bin:$HOME/.local/bin:$HOME/go/bin:$PATH"
 #+end_src
 
 * SSH Agent
 Run =ssh-agent= if =ssh-agent= is not already running. Ensure that the authorization socket is available in the shell.
-#+begin_src sh :tangle .profile
+#+begin_src sh :tangle ~/.profile
 if [ ! -S ~/.ssh/ssh_auth_sock ]; then
   eval `ssh-agent` > /dev/null
   ln -sf "$SSH_AUTH_SOCK" ~/.ssh/ssh_auth_sock
