--- a/config/waybar/style.org
+++ b/config/waybar/style.org
@@ -1,7 +1,6 @@
 #+title: Waybar Styling
-* Global
-Set global font, colours, and transitions.
-#+begin_src css :tangle yes
+Set global font, colours, and transitions to have a transparent background. The text is white with a small shadow.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   window#waybar {
       font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
       font-size: 13px;
@@ -13,26 +12,24 @@ Set global font, colours, and transitions.
   }
 #+end_src
 
-* Button
-Set global button styling.
-#+begin_src css :tangle yes
+Remove the border from buttons and make them square.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   button {
-      box-shadow: inset 0 -3px transparent;
       border: none;
       border-radius: 0;
   }
 #+end_src
 
-Set button hover styling
-#+begin_src css :tangle yes
+Hovering over a button should inherit the background colour and add a white border to the bottom.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   button:hover {
       background: inherit;
       box-shadow: inset 0 -3px #ffffff;
   }
 #+end_src
 
-Set workspace button styling.
-#+begin_src css :tangle yes
+Workspace buttons should have white with a small shadow, a little bit of extra horizontal padding, and a transparent background.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #workspaces button {
       padding: 0 5px;
       text-shadow: 1px 1px #64727D;
@@ -41,40 +38,30 @@ Set workspace button styling.
   }
 #+end_src
 
-Set button hover styling in workspaces.
-#+begin_src css :tangle yes
+Hovering over a workspace button should darken it.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #workspaces button:hover {
       background: rgba(0, 0, 0, 0.2);
   }
 #+end_src
 
-Set button focused styling in workspaces.
-#+begin_src css :tangle yes
+The focused workspace should have a white bottom border.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #workspaces button.focused {
       background: transparent;
-      text-shadow: 1px 1px #64727D;
       box-shadow: inset 0 -3px #ffffff;
   }
 #+end_src
 
-Set button urgent styling in workspaces.
-#+begin_src css :tangle yes
+Urgent workspaces should be red.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #workspaces button.urgent {
       background-color: #eb4d4b;
   }
 #+end_src
 
-* Modes
-Set global mode styling.
-#+begin_src css :tangle yes
-  #mode {
-      background-color: #64727D;
-      border-bottom: 3px solid #ffffff;
-  }
-#+end_src
-
-Set typical mode styling.
-#+begin_src css :tangle yes
+Add extra horizontal padding where needed.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #clock,
   #cpu,
   #memory,
@@ -88,20 +75,19 @@ Set typical mode styling.
   #scratchpad,
   #mpd {
       padding: 0 10px;
-      color: #ffffff;
   }
 #+end_src
 
-Add margins for workspaces and windows.
-#+begin_src css :tangle yes
+Add extra horizontal margins where needed.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #window,
   #workspaces {
       margin: 0 4px;
   }
 #+end_src
 
-Omit margins on leftmost and rightmost workspaces.
-#+begin_src css :tangle yes
+Omit margins on the leftmost and rightmost workspaces.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   .modules-left > widget:first-child > #workspaces {
       margin-left: 0;
   }
@@ -112,31 +98,27 @@ Omit margins on leftmost and rightmost workspaces.
   }
 #+end_src
 
-Set focus styling.
-#+begin_src css :tangle yes
-  label:focus {
-      background-color: #000000;
-  }
-#+end_src
-
-Set important mode styling.
-#+begin_src css :tangle yes
+Passive system tray icons are dimmed.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #tray > .passive {
       -gtk-icon-effect: dim;
   }
+#+end_src
 
+Tray icons that need attention are highlighted.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #tray > .needs-attention {
       -gtk-icon-effect: highlight;
   }
 #+end_src
 
-Set scratchpad styling.
-#+begin_src css :tangle yes
+The scratchpad should be darkened and transparent when empty.
+#+begin_src css :tangle ~/.config/waybar/style.css :mkdirp yes
   #scratchpad {
       background: rgba(0, 0, 0, 0.2);
   }
 
   #scratchpad.empty {
-          background-color: transparent;
+      background-color: transparent;
   }
 #+end_src
