--- a/config/fastfetch/config.org
+++ b/config/fastfetch/config.org
@@ -1,11 +1,11 @@
 #+title: Fastfetch Settings
 Open a JSON object.
-#+begin_src jsonc :tangle yes
+#+begin_src js :tangle ~/.config/fastfetch/config.jsonc :mkdirp yes
   {
 #+end_src
 
 Use a =sixel= image for the logo.
-#+begin_src jsonc :tangle yes
+#+begin_src js :tangle ~/.config/fastfetch/config.jsonc :mkdirp yes
   "logo": {
       "type": "raw",
       "source": "~/.config/fastfetch/logo.sixel",
@@ -15,14 +15,14 @@ Use a =sixel= image for the logo.
 #+end_src
 
 Two spaces between an item and its key.
-#+begin_src jsonc :tangle yes
+#+begin_src js :tangle ~/.config/fastfetch/config.jsonc :mkdirp yes
   "display": {
         "separator": "  "
   },
 #+end_src
 
 Define the modules in the =fastfetch= display.
-#+begin_src jsonc :tangle yes
+#+begin_src js :tangle ~/.config/fastfetch/config.jsonc :mkdirp yes
   "modules": [
     "title",
     {
@@ -87,6 +87,6 @@ Define the modules in the =fastfetch= display.
 #+end_src
 
 Close the JSON object.
-#+begin_src jsonc :tangle yes
+#+begin_src js :tangle ~/.config/fastfetch/config.jsonc :mkdirp yes
 }
 #+end_src
