--- a/install
+++ b/install
@@ -30,7 +30,7 @@ find -- * -type f -name "*.org" | while read -r file; do
 done
 
 echo Installing wallpaper...
-cp wallpaper ~/.wallpaper
+cp wallpaper.png ~/.wallpaper
 
 fonts_changed=false
 if ! test -d ~/.local/share/fonts/ComputerModern; then
