--- a/install
+++ b/install
@@ -25,7 +25,7 @@ if ! diff ~/.dotfiles/install ~/.local/bin/update-home >> ~/.update-home.log; th
 fi
 
 echo Installing configuration files...
-find -- * -type f -name "*.org" | while read -r file; do
+find -- . -type f -name "*.org" | while read -r file; do
     emacs --batch "${file}" -f package-initialize --eval '(org-babel-tangle)' >> ~/.update-home.log
 done
 
