--- a/install.org
+++ b/install.org
@@ -1,21 +1,6 @@
-#+title: Dotfiles =/=
+#+title: Install Script
 
-This page is the home of my dotfiles. They are written using literate programming in Emacs Org-Mode. The =install= script installs the dotfiles in their correct places and installs itself as an executable called =update-home= on the path to allow myself to run the script without having the repository downloaded on my system.
-
-* Directories
-- [[./.config/][.config/]]
-- [[./.local/][.local/]]
-- [[./.ssh/][.ssh/]]
-
-* Files
-- [[./clang-format.org][.clang-format]]
-- [[./gitconfig.org][.gitconfig]]
-- [[./profile.org][.profile]]
-- [[./zshrc.org][.zshrc]]
-- [[./wallpaper.png][.wallpaper]]
-
-* Install Script
-It can be run as =./install=, so make it explicit what binary to run it with (POSIX shell).
+This can be run as =./install=, so make it explicit what binary to run it with (POSIX shell).
 #+begin_src sh :tangle ~/.dotfiles/install :mkdirp yes
   #!/bin/sh
 #+end_src
