--- a/.ssh/config.org
+++ b/.ssh/config.org
@@ -1,5 +1,12 @@
 #+title: SSH Configuration
 Keys should be added to the SSH agent.
 #+begin_src conf :tangle ~/.ssh/config :mkdirp yes
-  AddKeysToAgent yes
+  Host *
+      UseKeychain yes
+      AddKeysToAgent yes
+      IdentityFile ~/.ssh/id_ed25519
+
+  Host aviary
+      HostName aviary.cs.umanitoba.ca
+      User janzenj2
 #+end_src
