--- a/zshrc.org
+++ b/zshrc.org
@@ -9,9 +9,9 @@ Set up completions.
   promptinit
 #+end_src
 
-Enable gentoo completions on Linux.
-#+begin_src sh :tangle (cond ((eq system-type 'gnu/linux) "~/.zshrc") (t "no")) :mkdirp yes
-  prompt gentoo
+Enable completions.
+#+begin_src sh :tangle ~/.zshrc :mkdirp yes
+  prompt /opt/homebrew/share/zsh/site-functions
 #+end_src
 
 Set up the history with 1000 entries and ignored duplicate commands.
