--- a/install
+++ b/install
@@ -30,23 +30,23 @@ find -- . -type f -name "*.org" | while read -r file; do
 done
 
 echo Installing wallpaper...
-cp wallpaper.png ~/.wallpaper
+cp .wallpaper ~/.wallpaper
 osascript -e "tell application \"System Events\" to tell every desktop to set picture to \"/~/.wallpaper\" as POSIX file"
 
 fonts_changed=false
 if ! test -d ~/.local/share/fonts/ComputerModern; then
     echo Computer Modern font missing. Installing...
-    tar xf ~/.dotfiles/local/share/fonts/ComputerModern.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
+    tar xf ~/.dotfiles/.local/share/fonts/ComputerModern.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
     fonts_changed=true
 fi
 if ! test -f ~/.local/share/fonts/NFM.ttf; then
     echo Nerd Font Mono font missing. Installing...
-    tar xf ~/.dotfiles/local/share/fonts/NFM.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
+    tar xf ~/.dotfiles/.local/share/fonts/NFM.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
     fonts_changed=true
 fi
 if ! test -d ~/.local/share/fonts/SauceCodePro; then
     echo Source Code Pro Nerd Font missing. Installing...
-    tar xf ~/.dotfiles/local/share/fonts/SauceCodePro.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
+    tar xf ~/.dotfiles/.local/share/fonts/SauceCodePro.tar.gz -C ~/.local/share/fonts >> ~/.update-home.log
     fonts_changed=true
 fi
 
