--- a/.config/emacs/user-interface.org
+++ b/.config/emacs/user-interface.org
@@ -27,6 +27,12 @@ Use =doom-modeline= for a nicer modeline.
     :init (doom-modeline-mode 1))
 #+end_src
 
+Remove the titlebar.
+#+begin_src emacs-lisp :tangle ~/.config/emacs/user-interface.el :mkdirp yes
+  (add-to-list 'default-frame-alist '(undecorated . t))
+#+end_src
+
+
 * Clean UI
 Disable the Emacs start screen and make the =scratch= buffer default to empty.
 #+begin_src emacs-lisp :tangle ~/.config/emacs/user-interface.el :mkdirp yes
